# docs-claw

./: READE.md  README.md  install-opencode.sh  llm-wiki.md  pyproject.toml
docs/superpowers/plans/: 2026-05-23-official-docs-claw.md  2026-05-23-opencode-one-click-install.md  2026-05-23-tree-navigation-protocol.md  2026-05-23-tree-wiki.md
docs/superpowers/specs/: 2026-05-23-official-docs-claw-design.md
skills/official-docs/: SKILL.md
src/docs_claw/: cli.py  converter.py  crawler.py  opencode.py  paths.py  registry.py  search.py  tree_navigation.py  tree_wiki.py  wiki.py
src/docs_claw.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
src/docs_claw/adapters/: sphinx.py
src/docs_claw/skills/official-docs/: SKILL.md
tests/: test_cli.py  test_converter.py  test_crawler.py  test_end_to_end.py  test_install_script.py  test_opencode_init.py  test_paths.py  test_registry.py  test_search.py  test_skill_file.py  test_sphinx_adapter.py  test_tree_navigation.py  test_tree_wiki.py  test_wiki.py
